# wikki

./: .gitignore  LLAMA_CPP_GUIDE.md  README.md  SILERO_TTS_GUIDE.md  assistant.html  avatar.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
agent_back/: agent.py  document_editing_tools.py  document_readers.py  filesystem_tools.py  gemma_mcp_server.py  langchain.py  main.py  pyproject.toml  requirements.txt  run_backend.py  system_tools.py
agent_back/gemma_mcp_client/: __init__.py  gemma_client.py
src/: App.css  App.tsx  AvatarApp.tsx  NewApp.tsx  SettingsPage.tsx  avatar.tsx
src-tauri/: Cargo.toml  requirements.txt  tauri.conf.json
src-tauri/capabilities/: avatar.json  default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  llama.rs  mod.rs  screenshot.rs  stt.rs  tts.rs  window.rs
src-tauri/src/models/: chat.rs  mod.rs  ollama.rs
src-tauri/src/services/: audio_processor.rs  llama_server.rs  mod.rs  ollama.rs  screenshot_timer.rs  silero_tts.rs  silero_tts_service.py  tts_engine_eng.py  tts_engine_ru.py
src/components/Avatar3D/: Avatar3D.tsx
src/stores/: appStore.ts
src/styles/: avatar.css
