[project]
name = "wikki"
version = "0.1.0"
description = "AI agent asisstant for your PC"
authors = [
    { name = "Timur-marii8st", email = "4gg528@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/Timur-marii8st" }
keywords = ["waifu", "mcp", "ai", "desktop","ai agent"]
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.4.0",
    "fastmcp>=0.1.0",
    "pypdf>=3.0.0",
    "reportlab>=3.6.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "aiofiles>=23.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]